==> nguyenkhanhtung89/bk10/BK10-DVBK/MCU-GD/src/digital.c <==
#include "digital.h"
#include "utils.h"
#include "osObjects.h"
#include "canbus.h"

void digital_init(void){
	static osTimerId uTimId;  
	
	//init os messsage queue
	UART3RxMsgBox = osMessageCreate(osMessageQ(UART3RxMsgBox), NULL);
	USART1RxMsgBox = osMessageCreate(osMessageQ(USART1RxMsgBox), NULL);
	
	//create thread UART3 receiver
	UART3_receiver_thread = osThreadCreate(osThread(vUART3Receiver), NULL);
  if(!UART3_receiver_thread) return;
	
	//create thread USART1 receiver
	USART1_receiver_thread = osThreadCreate(osThread(vUSART1Receiver), NULL);
  if(!USART1_receiver_thread) return;
	
	if(mcu_config.TypeOBD == J1587_TYPE){
		//Create mail queue
		J1587PkgMailBox = osMailCreate(osMailQ(J1587PkgMailBox),NULL);
		if(J1587PkgMailBox == NULL) return;
		//create thread J1587 handler Task
		vJ1587HandlerThread = osThreadCreate(osThread(vJ1587HandlerTask), NULL);
		if(!vJ1587HandlerThread) return;
		
		//create thread J1587 request Task
		vJ1587RequestThread = osThreadCreate(osThread(vJ1587RequestTask), NULL);
		if(!vJ1587RequestThread) return;
	}
	
	uTimId = osTimerCreate (osTimer(FuelTimer), osTimerPeriodic, (void*)0);
	if (uTimId != NULL){
		osStatus status;
    // start timer with delay 1000ms
    status = osTimerStart(uTimId, 1000);
    if (status != osOK) {
      return;
    }
  }
	
	//init uart 2&4
	USART1Init(mcu_config.baud_2_value);
	UART3Init(mcu_config.baud_4_value);
}

void ECUJ1587_Data_Request(uint8_t pid){
	uint32_t sum = 0;
	
	gpio_bit_set(J1587_RDE_GPIO_PORT, J1587_RDE_PIN);		
	osDelay(10);
	
	UART_SendByte(USART1, 0xAC);	
	UART_SendByte(USART1, 0x00);	
	UART_SendByte(USART1, pid);	
	
	/* Calculate checksum */
	sum = 0xAC + 0x00 + pid;
	sum = sum & 0xFF;
	sum = 256 - sum;															/* Two's Complement check sum */
	UART_SendByte(USART1, sum & 0xFF);				/* Send check sum */
	
	osDelay(10);
	gpio_bit_reset(J1587_RDE_GPIO_PORT, J1587_RDE_PIN);
}

void vJ1587RequestTask(const void* args){
	for(;;){
		osDelay(1000);
		if(ACC_STATUS == 0){
			SetECUClearData();
			if(flg_init_j1587_uart == 1){
				flg_init_j1587_uart = 0;
				NVIC_DisableIRQ(USART1_IRQn);
				usart_deinit(USART1);
			}
				osDelay(3000);
			osThreadYield(); 
			continue;
		}
		if(flg_init_j1587_uart == 0){
			//init uart j1587
			USART1Init(mcu_config.baud_2_value);		
		}
		
		StepResq++;
		if(StepResq > 45){
			StepResq = 0;
		}
		
		/* Send request */
		J1587HandlerRequest(StepResq);
		osThreadYield(); 
	}
}
